# common_rs

./: Cargo.toml  README.md
examples/: copy_file.rs  custom_args.rs  custom_args.xml
src/: application.rs  build_info.rs  commandline.rs  config.rs  error.rs  lib.rs  logging.rs  logging_file.rs
